--- a/deplyment/deployment.yaml
+++ b/deplyment/deployment.yaml
@@ -13,8 +13,8 @@ metadata:
   namespace: playlist
 type: Opaque
 stringData:
-  user_id: "0e45c44b3e2e4da7a2be11a72a1c8575" # Your Jellyfin User ID
-  api_token: "e0b8c325bc1b426c81922b90c0aa2ff1" # Your Jellyfin API Token
+  user_id: "YOUR-JF-USER-ID" # Your Jellyfin User ID for example 0e45c44b3e2e4da7a2be11a72a1c8575
+  api_token: "YOUR-JF-API-TOKEN" # Your Jellyfin API Token for example e0b8c325bc1b426c81922b90c0aa2ff1
 ---
 apiVersion: v1
 kind: Secret
@@ -43,7 +43,7 @@ metadata:
   namespace: playlist
 data:
   MEDIASERVER_TYPE: "jellyfin"
-  JELLYFIN_URL: "http://jellyfin.192.168.3.131.nip.io:8087"
+  JELLYFIN_URL: "YOUR-JF-URL" # For example http://jellyfin.192.168.3.131.nip.io:8087
   POSTGRES_HOST: "postgres-service.playlist" # Database host
   POSTGRES_PORT: "5432" # Database port
   REDIS_URL: "redis://redis-service.playlist:6379/0"
@@ -196,7 +196,7 @@ spec:
         fsGroup: 0
       containers:
       - name: flask-app
-        image: ghcr.io/neptunehub/audiomuse-ai:0.6.4-beta # Your image from GHCR
+        image: ghcr.io/neptunehub/audiomuse-ai:0.6.5-beta # Your image from GHCR
         imagePullPolicy: Always
         ports:
         - containerPort: 8000 # Flask app listens on 8000
@@ -307,7 +307,7 @@ spec:
         fsGroup: 0
       containers:
       - name: rq-worker
-        image: ghcr.io/neptunehub/audiomuse-ai:0.6.4-beta # Your image from GHCR
+        image: ghcr.io/neptunehub/audiomuse-ai:0.6.5-beta # Your image from GHCR
         imagePullPolicy: Always
         env:
         - name: SERVICE_TYPE
