Fix supervisor configuration path
Changed deplyment to deployment

--- a/Dockerfile.essentia
+++ b/Dockerfile.essentia
@@ -83,7 +83,7 @@ RUN rm -f /app/tasks/analysis.py && \
     mv /app/compatibility/analysis_essentia.py /app/tasks/analysis.py
 
 # Copy the supervisor configuration
-COPY deplyment/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY deployment/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 # Set the python path to include the app directory and site-packages
 ENV PYTHONPATH=/usr/local/lib/python3/dist-packages:/app
