--- a/deplyment/docker-compose-navidrome.yaml
+++ b/deplyment/docker-compose-navidrome.yaml
@@ -55,7 +55,7 @@ services:
 
   # AudioMuse-AI RQ Worker service
   audiomuse-ai-worker:
-    image: ghcr.io/neptunehub/audiomuse-ai:0.6.5-0beta
+    image: ghcr.io/neptunehub/audiomuse-ai:0.6.5-beta
     container_name: audiomuse-ai-worker-instance
     environment:
       SERVICE_TYPE: "worker"
