--- a/.github/workflows/build-nvidia.yml
+++ b/.github/workflows/build-nvidia.yml
@@ -16,6 +16,18 @@ jobs:
       packages: write # Allow pushing to GitHub Container Registry
 
     steps:
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          swap-storage: false
+          large-packages: false
+          tool-cache: true
+          android: true
+          dotnet: true
+          haskell: true
+          docker-images: true
+
+
       - name: Checkout code
         uses: actions/checkout@v4
         # Removed lfs: true as models are now downloaded directly in Dockerfile
