--- a/.github/workflows/build-nvidia.yml
+++ b/.github/workflows/build-nvidia.yml
@@ -1,4 +1,4 @@
-name: Build, Test, and Push AudioMuse AI Docker Image
+name: Build, Test, and Push AudioMuse AI Docker Image with NVIDIA support
 
 on:
   push:
