--- a/Dockerfile.nvidia
+++ b/Dockerfile.nvidia
@@ -10,6 +10,16 @@ WORKDIR /app
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* && \
     apt-get update -o Acquire::Retries=5 -o Acquire::Timeout=30
 
+# --- START FIX: Generate and set a proper UTF-8 locale ---
+# This prevents encoding errors with non-ASCII characters in track titles
+RUN apt-get install -y --no-install-recommends locales && \
+    sed -i -e 's/# en_US.UTF-8 UTF-8/en_US.UTF-8 UTF-8/' /etc/locale.gen && \
+    dpkg-reconfigure --frontend=noninteractive locales
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US:en
+ENV LC_ALL en_US.UTF-8
+# --- END FIX ---
+
 # Install system dependencies, removed libtag1v5 as a potential source of 404s
 RUN apt-get install -y --no-install-recommends \
     python3 python3-pip python3-dev \
