--- a/Dockerfile.nvidia
+++ b/Dockerfile.nvidia
@@ -24,6 +24,7 @@ ENV LC_ALL en_US.UTF-8
 RUN apt-get install -y --no-install-recommends \
     python3 python3-pip python3-dev \
     libfftw3-3 libyaml-0-2 libsamplerate0 \
+    libsndfile1 \
     ffmpeg wget git vim \
     redis-tools curl \
     supervisor \
