add temporary onnx build

--- a/.github/workflows/build-arm-intel.yml
+++ b/.github/workflows/build-arm-intel.yml
@@ -1,8 +1,9 @@
 # This workflow builds and tests a multi-architecture Docker image for both AMD64 and ARM64.
-# It triggers on pushes to the main and devel branches, as well as on version tags.
+# It triggers on pushes to the main, devel, and onnx branches, as well as on version tags.
 # Tags are automatically generated based on the triggering event:
 # - main branch -> 'latest'
 # - devel branch -> 'devel'
+# - onnx branch -> 'onnx'
 # - version tags (e.g., v1.2.3) -> version number (e.g., '1.2.3')
 
 name: Build, Test, and Push AudioMuse AI Docker Image INTEL and ARM
@@ -12,6 +13,7 @@ on:
     branches:
       - main          # Trigger for 'latest' tag
       - devel         # Trigger for 'devel' tag
+      - onnx          # New branch also triggers for 'onnx' tag
     tags:
       - 'v*.*.*'      # Trigger for version tags like v1.0.0
 
@@ -59,8 +61,10 @@ jobs:
           tags: |
             # Set 'latest' tag for the main branch
             type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
-            # Use the branch name as the tag for other branches (e.g., 'devel')
-            type=ref,event=branch,enable=${{ github.ref != 'refs/heads/main' }}
+            # Set 'devel' tag only for the devel branch
+            type=raw,value=devel,enable=${{ github.ref == 'refs/heads/devel' }}
+            # Set 'onnx' tag only for the onnx branch
+            type=raw,value=onnx,enable=${{ github.ref == 'refs/heads/onnx' }}
             # Use the version number for Git tags (e.g., v1.2.3 -> 1.2.3)
             type=semver,pattern={{version}}
 
